fix: billing table spacing

--- a/src/components/billing/order/styles.scss
+++ b/src/components/billing/order/styles.scss
@@ -26,25 +26,25 @@
   }
 
   &__table {
-    margin: 0 0 16px 0;
+    margin: 0 0 0 -64px;
     width: 100%;
+    table-layout: auto;
+    border-collapse: separate;
+    border-spacing: 48px 16px;
 
     thead {
-      width: 100%;
-
       tr {
         text-align: left;
         th {
           color: $text;
           font-size: 14px;
           font-weight: 500;
+          padding: 8px 16px;
         }
       }
     }
 
     tbody {
-      width: 100%;
-
       tr {
         border-radius: 8px;
 
@@ -56,6 +56,7 @@
           color: $bold-text;
           font-size: 16px;
           font-weight: 500;
+          padding: 8px 16px;
 
           button {
             @include btnReset;
@@ -80,6 +81,7 @@
       font-size: 16px;
       font-weight: 500;
       text-decoration: underline;
+      padding: 0;
     }
   }
 
